licenses(["notice"])

filegroup(
    name = "srcs",
    srcs = glob([
        "*.hpp",
        "src/*.cpp",
    ]) + ["BUILD.bazel"],
    visibility = ["//visibility:public"],
)

filegroup(
    name = "test_srcs",
    srcs = glob([
        "test/*.hpp",
        "test/*.cpp",
    ]),
)

filegroup(
    name = "benchmark_srcs",
    srcs = glob([
        "bm/*.hpp",
        "bm/*.cpp",
    ]),
)

######### LIBRARIES #########

cc_library(
    name = "ade",
    hdrs = glob(["*.hpp"]),
    srcs = glob(["src/*.cpp"]),
    copts = ["-std=c++17"],
    deps = ["@com_github_mingkaic_cppkg//logs:logs"],
    visibility = ["//visibility:public"],
)

######### TEST #########

cc_test(
    name = "test",
    size = "medium",
    srcs = ["//ade:test_srcs"],
    deps = [
        "//ade:ade",
        "//testutil:testutil",
    ],
    copts = ["-std=c++17"],
)

######### BENCHMARK #########

cc_binary(
    name = "benchmark",
    srcs = ["//ade:benchmark_srcs"],
    deps = [
        "//ade:ade",
        "@com_github_google_benchmark//:benchmark",
    ],
    copts = ["-std=c++17"],
)
