licenses(["notice"])

package(
    default_visibility = ["//visibility:public"],
)

filegroup(
    name = "srcs",
    srcs = glob([
        "**/*.py",
        "runtime/*",
    ]) + ["BUILD.bazel"],
)

filegroup(
    name = "test_srcs",
    srcs = glob(["test/*.py"]),
)

######### LIBRARIES #########

py_library(
    name = "age_tmpl",
    srcs = glob(["templates/*.py"]),
)

py_binary(
    name = "agen",
    srcs = ["agen.py"],
    deps = ["//age:age_tmpl"],
)

cc_library(
    name = "age_runtime",
    hdrs = glob(["runtime/*.hpp"]),
    srcs = glob(["runtime/*.cpp"]),
    copts = ["-std=c++14"],
    deps = ["//ade:ade"],
    linkstatic = True,
)

######### TEST #########

py_test(
    name = "test",
    srcs = glob(["test.py"]),
    deps = ["//age:age_tmpl"],
)

cc_test(
    name = "test_runtime",
    srcs = glob(["test/*.cpp"]),
    copts = ["-std=c++14"],
    deps = [
        "//dbg:dbg",
        "//age:age_runtime",
        "@com_google_googletest//:gtest",
    ],
)
