licenses(["notice"])

filegroup(
    name = "srcs",
    srcs = glob([
        "*.hpp",
        "src/*.cpp",
    ]) + ["BUILD.bazel"],
    visibility = ["//visibility:public"],
)

filegroup(
    name = "test_srcs",
    srcs = glob([
        "test/*.hpp",
        "test/*.cpp",
    ]),
)

######### LIBRARIES #########

cc_library(
    name = "bwd",
    hdrs = glob(["*.hpp"]),
    srcs = glob(["src/*.cpp"]),
    copts = ["-std=c++14"],
    deps = ["//ade:ade"],
    linkstatic = True,
    visibility = ["//visibility:public"],
)

######### TEST #########

cc_test(
    name = "test",
    srcs = [":test_srcs"],
    copts = ["-std=c++14"],
    deps = [
        "//dbg:dbg",
        "//bwd:bwd",
        "@com_google_googletest//:gtest",
    ],
)
