licenses(["notice"])

package(
    default_visibility = ["//visibility:public"],
)

filegroup(
    name = "eteq",
    srcs = ["ops.yml", "eteq.yml", "fulltype.yml"],
)

filegroup(
    name = "eteq_min",
    srcs = ["ops.yml", "eteq.yml", "mintype.yml"],
)

filegroup(
    name = "optimizations",
    srcs = ["optimizations.rules"],
)
