licenses(["notice"])

package(
    default_visibility = ["//visibility:public"],
)

COMMON_CFGS = ["ops.yml", "eteq.yml"] + glob(["eteq/*.yml"])

filegroup(
    name = "eteq",
    srcs = ["fulltype.yml"] + COMMON_CFGS,
)

filegroup(
    name = "eteq_min",
    srcs = ["mintype.yml"] + COMMON_CFGS,
)

filegroup(
    name = "optimizations",
    srcs = ["optimizations.json"],
)
