licenses(["notice"])

package(
    default_visibility = ["//visibility:public"],
)

COMMON_CFGS = ["ops.yml", "tenncor.yml"]

filegroup(
    name = "srcs",
    srcs = [
        ":tenncor_classes",
        ":tenncor",
        ":tenncor_min",
        ":optimizations",
        "BUILD.bazel",
    ],
)

filegroup(
    name = "tenncor_classes",
    srcs = glob(["tenncor/*.yml"]),
)

filegroup(
    name = "tenncor",
    srcs = ["fulltype.yml"] + COMMON_CFGS,
)

filegroup(
    name = "tenncor_min",
    srcs = ["mintype.yml"] + COMMON_CFGS,
)

filegroup(
    name = "optimizations",
    srcs = ["optimizations.json"],
)
