licenses(["notice"])

load("@rules_proto_grpc//cpp:defs.bzl", "cpp_grpc_library")
load("//third_party:tools/pybind.bzl", "pybind_py_library")

filegroup(
    name = "srcs",
    srcs = [
        ":compare_hdrs",
        ":print_hdrs",
        ":psess_hdrs",
        ":stats_plugin_hdrs",
        ":gemit_plugin_hdrs",
        ":gemit_plugin_protos",
        ":gemit_mock_srcs",
        ":pybind_srcs",
        "BUILD.bazel",
    ],
    visibility = ["//visibility:public"],
)

filegroup(
    name = "compare_hdrs",
    srcs = glob(["compare/*.hpp"]),
)

filegroup(
    name = "print_hdrs",
    srcs = glob(["print/*.hpp"]),
)

filegroup(
    name = "psess_hdrs",
    srcs = glob(["psess/*.hpp"]),
)

filegroup(
    name = "stats_plugin_hdrs",
    srcs = glob(["psess/stats/*.hpp"]),
)

filegroup(
    name = "gemit_plugin_hdrs",
    srcs = glob(["psess/emit/*.hpp"]),
)

filegroup(
    name = "gemit_plugin_protos",
    srcs = glob(["psess/emit/*.proto"]),
)

filegroup(
    name = "gemit_mock_srcs",
    srcs = glob(["psess/emit/mock/*.cpp"]),
)

filegroup(
    name = "pybind_srcs",
    srcs = glob(["python/*.cpp"]),
)

######### LIBRARY #########

cc_library(
    name = "compare",
    hdrs = [":compare_hdrs"],
    copts = ["-std=c++17"],
    deps = ["//tenncor/eteq:eteq"],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "print",
    hdrs = [":print_hdrs"],
    copts = ["-std=c++17"],
    deps = ["//teq:mock_teq"],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "psess",
    hdrs = [":psess_hdrs"],
    copts = ["-std=c++17"],
    deps = ["//teq:teq"],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "stats_plugin",
    hdrs = [":stats_plugin_hdrs"],
    copts = ["-std=c++17"],
    deps = [
        ":psess",
        "//eigen:eigen",
    ],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "gemit_plugin",
    hdrs = [":gemit_plugin_hdrs"],
    copts = ["-std=c++17"],
    deps = [
        ":psess",
        ":gemitter_cc_grpc",
        "//tenncor/eteq:eteq",
        "@boost//:uuid",
        "@com_github_mingkaic_cppkg//jobs:jobs",
    ],
    visibility = ["//visibility:public"],
)

proto_library(
    name = "gemitter_grpc",
    srcs = [":gemit_plugin_protos"],
    deps = ["//onnx:onnx_proto"],
    visibility = ["//visibility:public"],
)

# cpp_grpc_library(
#     name = "gemitter_cc_grpc",
#     deps = [
#         ":gemitter_grpc",
#         "//onnx:onnx_proto",
#     ],
#     visibility = ["//visibility:public"],
# )

cc_library(
    name = "gemitter_cc_grpc",
    hdrs = [
        "psess/emit/gemitter.pb.h",
        "psess/emit/gemitter.grpc.pb.h",
    ],
    srcs = [
        "psess/emit/gemitter.pb.cc",
        "psess/emit/gemitter.grpc.pb.cc",
    ],
    copts = ["-std=c++17"],
    deps = [
        "//onnx:onnx_cc_proto",
        "@com_github_grpc_grpc//:grpc++",
    ],
)

######### PYBINDS #########

pybind_py_library(
    name = "compare_py",
    cc_srcs = ["python/compare.cpp"],
    cc_deps = [
        ":compare",
        "//tenncor:tenncor",
    ],
    copts = ["-std=c++17"],
    visibility = ["//visibility:public"],
)

pybind_py_library(
    name = "print_py",
    cc_srcs = ["python/print.cpp"],
    cc_deps = [
        ":print",
        "//tenncor:tenncor",
    ],
    copts = ["-std=c++17"],
    visibility = ["//visibility:public"],
)

pybind_py_library(
    name = "psess_py",
    cc_srcs = ["python/psess.cpp"],
    cc_deps = [
        ":gemit_plugin",
        ":stats_plugin",
        "//tenncor:tenncor",
    ],
    py_deps = ["//tenncor:tenncor_py"],
    copts = ["-std=c++17"],
    visibility = ["//visibility:public"],
)

######### TEST #########

cc_binary(
    name = "mockserver",
    srcs = [":gemit_mock_srcs"],
    deps = [":gemitter_cc_grpc"],
)
