licenses(["notice"])

load("@rules_proto_grpc//cpp:defs.bzl", "cpp_grpc_library")
load("//third_party:tools/pybind.bzl", "pybind_py_library")

filegroup(
    name = "srcs",
    srcs = [
        ":compare_hdrs",
        ":print_hdrs",
        ":peval_hdrs",
        ":stats_plugin_hdrs",
        ":gemit_plugin_hdrs",
        ":gemit_plugin_protos",
        ":gemit_mock_srcs",
        ":pybind_srcs",
        "BUILD.bazel",
    ],
    visibility = ["//visibility:public"],
)

filegroup(
    name = "compare_hdrs",
    srcs = glob(["compare/*.hpp"]),
)

filegroup(
    name = "print_hdrs",
    srcs = glob(["print/*.hpp"]),
)

filegroup(
    name = "peval_hdrs",
    srcs = glob(["peval/*.hpp"]),
)

filegroup(
    name = "stats_plugin_hdrs",
    srcs = glob(["peval/stats/*.hpp"]),
)

filegroup(
    name = "gemit_plugin_hdrs",
    srcs = glob(["peval/emit/*.hpp"]),
)

filegroup(
    name = "gemit_plugin_protos",
    srcs = glob(["peval/emit/*.proto"]),
)

filegroup(
    name = "gemit_mock_srcs",
    srcs = glob(["peval/emit/mock/*.cpp"]),
)

filegroup(
    name = "pybind_srcs",
    srcs = glob(["python/*.cpp"]),
)

######### LIBRARY #########

cc_library(
    name = "compare",
    hdrs = [":compare_hdrs"],
    copts = ["-std=c++17"],
    deps = ["//tenncor/eteq:eteq"],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "print",
    hdrs = [":print_hdrs"],
    copts = ["-std=c++17"],
    deps = ["//teq:mock_teq"],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "peval",
    hdrs = [":peval_hdrs"],
    copts = ["-std=c++17"],
    deps = ["//teq:teq"],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "stats_plugin",
    hdrs = [":stats_plugin_hdrs"],
    copts = ["-std=c++17"],
    deps = [
        ":peval",
        "//eigen:eigen",
    ],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "gemit_plugin",
    hdrs = [":gemit_plugin_hdrs"],
    copts = ["-std=c++17"],
    deps = [
        ":peval",
        ":gemitter_cc_grpc",
        "//tenncor/eteq:eteq",
        "@boost//:uuid",
        "@com_github_mingkaic_cppkg//jobs:jobs",
    ],
    visibility = ["//visibility:public"],
)

proto_library(
    name = "gemitter_grpc",
    srcs = [":gemit_plugin_protos"],
    deps = ["//onnx:onnx_pb"],
    visibility = ["//visibility:public"],
)

# cpp_grpc_library(
#     name = "gemitter_cc_grpc",
#     deps = [
#         ":gemitter_grpc",
#         "//onnx:onnx_pb",
#     ],
#     visibility = ["//visibility:public"],
# )

cc_library(
    name = "gemitter_cc_grpc",
    hdrs = [
        "peval/emit/gemitter.pb.h",
        "peval/emit/gemitter.grpc.pb.h",
    ],
    srcs = [
        "peval/emit/gemitter.pb.cc",
        "peval/emit/gemitter.grpc.pb.cc",
    ],
    copts = ["-std=c++17"],
    deps = [
        "//onnx:onnx_cc_pb",
        "@com_github_grpc_grpc//:grpc++",
    ],
)

######### PYBINDS #########

pybind_py_library(
    name = "compare_py",
    cc_srcs = ["python/compare.cpp"],
    cc_deps = [
        ":compare",
        "//tenncor:tenncor",
    ],
    copts = ["-std=c++17"],
    visibility = ["//visibility:public"],
)

pybind_py_library(
    name = "print_py",
    cc_srcs = ["python/print.cpp"],
    cc_deps = [
        ":print",
        "//tenncor:tenncor",
    ],
    copts = ["-std=c++17"],
    visibility = ["//visibility:public"],
)

pybind_py_library(
    name = "peval_py",
    cc_srcs = ["python/peval.cpp"],
    cc_deps = [
        ":gemit_plugin",
        ":stats_plugin",
        "//tenncor:tenncor",
    ],
    py_deps = ["//tenncor:tenncor_py"],
    copts = ["-std=c++17"],
    visibility = ["//visibility:public"],
)

######### TEST #########

cc_binary(
    name = "mockserver",
    srcs = [":gemit_mock_srcs"],
    deps = [":gemitter_cc_grpc"],
)
